--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "nodemon"
   },
-  "keywords": ["node","express", "Knex"],
+  "keywords": [
+    "node",
+    "express",
+    "Knex"
+  ],
   "author": "Weverton Mata",
   "license": "ISC",
   "dependencies": {
@@ -17,6 +21,8 @@
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
     "knex": "^0.21.1",
+    "node-correios": "^3.0.2",
+    "node-cpf-cnpj": "^1.0.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.2.1"
