--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.4.7",
     "@react-navigation/native": "^5.4.2",
     "@react-navigation/stack": "^5.5.1",
@@ -19,6 +20,7 @@
     "react-native": "~0.61.5",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.7.0",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^1.0.2",
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "~0.9.0",
